--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2"
   }
 }
